--- a/clients/ios/Interfaces/PlaceDetailViewController.xib
+++ b/clients/ios/Interfaces/PlaceDetailViewController.xib
@@ -50,7 +50,7 @@
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="457520120"/>
+						<reference key="NSNextKeyView" ref="1053615344"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -453,24 +453,25 @@ MA</string>
 						<reference key="IBUIBackgroundColor" ref="607888386"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="457520120">
+					<object class="IBUIView" id="1053615344">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">301</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIButton" id="266882401">
-								<reference key="NSNextResponder" ref="457520120"/>
+							<object class="IBUIButton" id="728224870">
+								<reference key="NSNextResponder" ref="1053615344"/>
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{59, 0}, {80, 49}}</string>
-								<reference key="NSSuperview" ref="457520120"/>
+								<reference key="NSSuperview" ref="1053615344"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="871403564"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUIContentMode">1</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<reference key="IBUIHighlightedTitleColor" ref="391733817"/>
-								<object class="NSColor" key="IBUINormalTitleColor" id="1019880827">
+								<object class="NSColor" key="IBUINormalTitleColor" id="826282576">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
 								</object>
@@ -487,24 +488,25 @@ MA</string>
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">toolbar_todoButton.png</string>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="350517490">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="863217181">
 									<string key="name">HelveticaNeue-Bold</string>
 									<string key="family">Helvetica Neue</string>
 									<int key="traits">2</int>
 									<double key="pointSize">10</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="981969593">
+								<object class="NSFont" key="IBUIFont" id="622109573">
 									<string key="NSName">HelveticaNeue-Bold</string>
 									<double key="NSSize">10</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUILabel" id="626525055">
-								<reference key="NSNextResponder" ref="457520120"/>
+							<object class="IBUILabel" id="871403564">
+								<reference key="NSNextResponder" ref="1053615344"/>
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{71, 32}, {50, 16}}</string>
-								<reference key="NSSuperview" ref="457520120"/>
+								<reference key="NSSuperview" ref="1053615344"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="633466607"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -520,32 +522,32 @@ MA</string>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="971874407">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="978012889">
 									<string key="name">Helvetica-Bold</string>
 									<string key="family">Helvetica</string>
 									<int key="traits">2</int>
 									<double key="pointSize">10</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="1057392854">
+								<object class="NSFont" key="IBUIFont" id="1063664788">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">10</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="748972500">
-								<reference key="NSNextResponder" ref="457520120"/>
+							<object class="IBUIButton" id="633466607">
+								<reference key="NSNextResponder" ref="1053615344"/>
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{184, 0}, {80, 49}}</string>
-								<reference key="NSSuperview" ref="457520120"/>
+								<reference key="NSSuperview" ref="1053615344"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="582031208"/>
+								<reference key="NSNextKeyView" ref="50747586"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUIContentMode">1</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<reference key="IBUIHighlightedTitleColor" ref="391733817"/>
-								<reference key="IBUINormalTitleColor" ref="1019880827"/>
+								<reference key="IBUINormalTitleColor" ref="826282576"/>
 								<reference key="IBUINormalTitleShadowColor" ref="935614559"/>
 								<object class="NSCustomResource" key="IBUIHighlightedImage">
 									<string key="NSClassName">NSImage</string>
@@ -555,15 +557,16 @@ MA</string>
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">toolbar_stampButton.png</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="350517490"/>
-								<reference key="IBUIFont" ref="981969593"/>
+								<reference key="IBUIFontDescription" ref="863217181"/>
+								<reference key="IBUIFont" ref="622109573"/>
 							</object>
-							<object class="IBUILabel" id="582031208">
-								<reference key="NSNextResponder" ref="457520120"/>
+							<object class="IBUILabel" id="50747586">
+								<reference key="NSNextResponder" ref="1053615344"/>
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{199, 32}, {50, 16}}</string>
-								<reference key="NSSuperview" ref="457520120"/>
+								<reference key="NSSuperview" ref="1053615344"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -579,14 +582,14 @@ MA</string>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
-								<reference key="IBUIFontDescription" ref="971874407"/>
-								<reference key="IBUIFont" ref="1057392854"/>
+								<reference key="IBUIFontDescription" ref="978012889"/>
+								<reference key="IBUIFont" ref="1063664788"/>
 							</object>
 						</object>
 						<string key="NSFrame">{{0, 367}, {320, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="728224870"/>
 						<reference key="IBUIBackgroundColor" ref="391733817"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -760,6 +763,30 @@ MA</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">todoLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="871403564"/>
+					</object>
+					<int key="connectionID">70</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">todoButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="728224870"/>
+					</object>
+					<int key="connectionID">71</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">toolbarView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1053615344"/>
+					</object>
+					<int key="connectionID">72</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="1016267558"/>
 						<reference key="destination" ref="372490531"/>
@@ -792,6 +819,24 @@ MA</string>
 					</object>
 					<int key="connectionID">26</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">todoButtonPressed:</string>
+						<reference key="source" ref="728224870"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">69</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">stampButtonPressed:</string>
+						<reference key="source" ref="633466607"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">68</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -812,7 +857,7 @@ MA</string>
 							<reference ref="1016267558"/>
 							<reference ref="230223094"/>
 							<reference ref="1024577213"/>
-							<reference ref="457520120"/>
+							<reference ref="1053615344"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -972,38 +1017,38 @@ MA</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">63</int>
-						<reference key="object" ref="457520120"/>
+						<reference key="object" ref="1053615344"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="266882401"/>
-							<reference ref="626525055"/>
-							<reference ref="748972500"/>
-							<reference ref="582031208"/>
+							<reference ref="728224870"/>
+							<reference ref="871403564"/>
+							<reference ref="633466607"/>
+							<reference ref="50747586"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Toolbar</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">64</int>
-						<reference key="object" ref="266882401"/>
-						<reference key="parent" ref="457520120"/>
+						<reference key="object" ref="728224870"/>
+						<reference key="parent" ref="1053615344"/>
 						<string key="objectName">Button - Add to favorites</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">65</int>
-						<reference key="object" ref="626525055"/>
-						<reference key="parent" ref="457520120"/>
+						<reference key="object" ref="871403564"/>
+						<reference key="parent" ref="1053615344"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">66</int>
-						<reference key="object" ref="748972500"/>
-						<reference key="parent" ref="457520120"/>
+						<reference key="object" ref="633466607"/>
+						<reference key="parent" ref="1053615344"/>
 						<string key="objectName">Button - Restamp</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">67</int>
-						<reference key="object" ref="582031208"/>
-						<reference key="parent" ref="457520120"/>
+						<reference key="object" ref="50747586"/>
+						<reference key="parent" ref="1053615344"/>
 					</object>
 				</object>
 			</object>
@@ -1124,7 +1169,7 @@ MA</string>
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">67</int>
+			<int key="maxID">72</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1132,6 +1177,45 @@ MA</string>
 				<object class="IBPartialClassDescription">
 					<string key="className">EntityDetailViewController</string>
 					<string key="superclassName">STViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>mainActionButtonPressed:</string>
+							<string>stampButtonPressed:</string>
+							<string>todoButtonPressed:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>mainActionButtonPressed:</string>
+							<string>stampButtonPressed:</string>
+							<string>todoButtonPressed:</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">mainActionButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">stampButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">todoButtonPressed:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
@@ -1147,6 +1231,9 @@ MA</string>
 							<string>scrollView</string>
 							<string>shelfImageView</string>
 							<string>titleLabel</string>
+							<string>todoButton</string>
+							<string>todoLabel</string>
+							<string>toolbarView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1161,6 +1248,9 @@ MA</string>
 							<string>UIScrollView</string>
 							<string>UIImageView</string>
 							<string>UILabel</string>
+							<string>UIButton</string>
+							<string>UILabel</string>
+							<string>STToolbar</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -1178,6 +1268,9 @@ MA</string>
 							<string>scrollView</string>
 							<string>shelfImageView</string>
 							<string>titleLabel</string>
+							<string>todoButton</string>
+							<string>todoLabel</string>
+							<string>toolbarView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1224,6 +1317,18 @@ MA</string>
 							<object class="IBToOneOutletInfo">
 								<string key="name">titleLabel</string>
 								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">todoButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">todoLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">toolbarView</string>
+								<string key="candidateClassName">STToolbar</string>
 							</object>
 						</object>
 					</object>
